# dommunity

./: .gitignore  .travis.yml  COPYING  Cargo.toml  LICENSE  Makefile.am  README.md  codecov.yml  configure.ac
src/: Dommunity.props  Dommunity.ruleset  Dommunity.sln  Makefile.am  NuGet.props  dommunity.tests.cpp  entity.cpp
src/Dommunity/: Dommunity.csproj  (+1 more)
src/Dommunity.Blockchain/: Blockchain.cs  Dommunity.Blockchain.csproj  DommunityBlockchainServiceCollectionExtensions.cs  IBlockchain.cs  IBlockchainStorage.cs
src/Dommunity.Blockchain.Tests/: BlockchainTests.cs  Dommunity.Blockchain.Tests.csproj
src/Dommunity.Entity/: Entity.cs
src/Dommunity.Identity/: Account.cs  Dommunity.Identity.csproj  DommunityIdentityServiceCollectionExtensions.cs  Reputation.cs
src/Dommunity.Identity.Tests/: AccountTests.cs  Dommunity.Identity.Tests.csproj  ReputationTests.cs
src/Dommunity.Module/: Dommunity.Module.csproj  IModule.cs  IModuleManager.cs  IPlugin.cs  IPluginManager.cs  ModuleDefinition.cs  ModuleInitializationContext.cs  ModuleManager.cs
src/Dommunity.Module.Tests/: Dommunity.Module.Tests.csproj  ModuleDefinitionTests.cs  ModuleInitializationContextTests.cs  ModuleManagerTests.cs  TestModule.cs  TestModuleA.cs  TestModuleB.cs
src/Dommunity.Node/: Dommunity.Node.csproj  INode.cs  IRemoteNode.cs  Node.cs  RemoteNode.cs
src/Dommunity.Node.Tests/: Dommunity.Node.Tests.csproj  NodeTests.cs  RemoteNodeTests.cs  TestRemoteNode.cs
src/Dommunity.Testing/: Dommunity.Testing.csproj  SubstituteExtensions.cs
src/Dommunity.Tests/: Dommunity.Tests.csproj
(+27 files in other folders)
